[Fix] 현재 코드에 맞춰 AGENT.md 수정